Gtk-3.22&4.0: [Gnome-weather] Fix double borders around 'Location-List-Box' in GtkPopover
The hard-coded stylesheet enforces to draw borders around that GtkListBox,
so kill the parent GtkFrame > border node's borders...

--- a/gtk/sass/3.22/_misc.scss
+++ b/gtk/sass/3.22/_misc.scss
@@ -2188,6 +2188,11 @@ window > grid.vertical > stack > stack > grid.vertical {
   }
 }
 
+popover > grid > stack > grid#locations-grid > frame#locations-frame {
+  // hide double borders
+  > border { border: none; }
+}
+
 frame#weather-page-content-view {
   &, &:backdrop {
     .linked.osd.stack-switcher {
